--- a/data/projection.json
+++ b/data/projection.json
@@ -2,10 +2,13 @@
     "isaac": [
         1.0
     ],
+    "ebert": [
+        1.0
+    ],
     "steven": [
         0.8
     ],
-    "ebert": [
-        1.0
+    "_average": [
+        0.9333333333333332
     ]
 }
