--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,7 +35,7 @@ jobs:
         AWS_REGION: us-west-2
       run: |
         conda install pytest
-        pytest tests/test_pipeline_in_memory.py --cov > data/cov.txt
+        pytest --cov > data/cov.txt
     - name: pytest-coverage-commentator
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
