--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,6 +28,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Pull DynamoDb docker image
+      run: |
+        docker pull amazon/dynamodb-local
     - name: Test with pytest
       env:
         AWS_ACCESS_KEY_ID: fakeKeyId
@@ -36,6 +39,8 @@ jobs:
       run: |
         conda install pytest
         pytest
+    - name: Generate coverage report
+      run: |
         pytest --cov > data/cov.txt
     - name: pytest-coverage-commentator
       uses: coroo/pytest-coverage-commentator@v1.0.2
