--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -14,16 +14,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.9
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -32,25 +29,20 @@ jobs:
       run: |
         docker pull amazon/dynamodb-local
     - name: Test with pytest
-      env:
-        AWS_ACCESS_KEY_ID: fakeKeyId
-        AWS_SECRET_ACCESS_KEY: fakeAccessKey
-        AWS_REGION: us-west-2
       run: |
-        conda install pytest
         pytest
-    - name: Test with pytest
+    - name: Generate coverage report
       env:
         AWS_ACCESS_KEY_ID: fakeKeyId
         AWS_SECRET_ACCESS_KEY: fakeAccessKey
         AWS_REGION: us-west-2
       run: |
         pytest . --cov > data/cov.txt
-    - name: pytest-coverage-commentator
+    - name: Add coverage commend
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: data/cov.txt
-    - name: pytester-cov
+    - name: Check code coverage
       uses: programmingwithalex/pytester-cov@main
       with:
         pytest-root-dir: '.'
