--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -42,7 +42,7 @@ jobs:
         AWS_DEFAULT_REGION: us-west-2
       run: |
         pytest . --cov > data/cov.txt
-    - name: Add coverage commend
+    - name: Add coverage comment
       uses: coroo/pytest-coverage-commentator@v1.0.2
       with:
         pytest-coverage: data/cov.txt
