--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        PYTHON_VERSION: 3.9.6
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -47,8 +47,9 @@ jobs:
       with:
         pytest-coverage: data/cov.txt
     - name: Check code coverage
-      uses: programmingwithalex/pytester-cov@v1.2.4
+      uses: dima-engineer/pytest-cover@main
       with:
+        python-version: 3.9
         pytest-root-dir: '.'
         cov-omit-list: 'tests/*, app/ingestion/main_datastore_proxy.py'
         cov-threshold-single: 90
