--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        PYTHON_VERSION: 3.9.6
+        python-version: 3.9.6
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
