Add covergae check

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,3 +35,10 @@ jobs:
         AWS_DEFAULT_REGION: us-west-2
       run: |
         pytest
+    - name: Check test coverage
+      env:
+        AWS_ACCESS_KEY_ID: fakeKeyId
+        AWS_SECRET_ACCESS_KEY: fakeAccessKey
+        AWS_DEFAULT_REGION: us-west-2
+      run: |
+        pytest . --cov --cov-branch --cov-fail-under=95
