--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+aniso8601==9.0.1
 attrs==21.4.0
 boto3==1.24.36
 botocore==1.27.36
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
 coverage==6.4.2
 docker==5.0.3
+Flask==2.1.3
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
 idna==3.3
+importlib-metadata==4.12.0
 iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jmespath==1.0.1
+MarkupSafe==2.1.1
 numpy==1.23.1
 packaging==21.3
 pandas==1.4.3
@@ -24,3 +33,5 @@ six==1.16.0
 tomli==2.0.1
 urllib3==1.26.10
 websocket-client==1.3.3
+Werkzeug==2.2.0
+zipp==3.8.1
