--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -35,8 +35,11 @@ jobs:
           AWS_SECRET_ACCESS_KEY: fakeAccessKey
           AWS_DEFAULT_REGION: us-west-2
         run: |
-          pytest . --cov --cov-branch > data/cov.txt
+          pytest . --cov --cov-branch > data/metrics/pytest_cov/coverage_report.txt
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: data/cov.txt
+          pytest-coverage-path: data/metrics/pytest_cov/coverage_report.txt
+      - name: Generate performance statistics
+        run: |
+          locust -f tests/locustfile.py -u 10 -r 1 -t 60 --headless --only-summary -H http://localhost:5000 --csv data/metrics/locust/perf
