Get minio server working

--- a/.gitignore
+++ b/.gitignore
@@ -129,8 +129,6 @@ dmypy.json
 .pyre/
 
 # Project specific
-data/*.json
-data/*.csv
-data/dynamodb/*
-data/minio/*
+data/*
 reviewers-like-you-venv/*
+docker/*
