--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,20 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - "./data/dynamodb:/home/dynamodblocal/data"
+      - "./docker/dynamodb/data:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
   minio:
     command: "server /data --console-address \":9001\""
     image: "minio/minio:latest"
     container_name: minio
-    environment:
-      MINIO_ROOT_USER: AKIAIOSFODNN7EXAMPLE
-      MINIO_ROOT_PASSWORD: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKE
+    # environment:
+    #   MINIO_ROOT_USER: minioadmin
+    #   MINIO_ROOT_PASSWORD: minioadmin
     ports:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - "./data/minio:/data"
+      - "./docker/minio/data:/data"
   ingestion:
     container_name: ingestion
     environment:
