--- a/.github/workflows/docker-image-create.yml
+++ b/.github/workflows/docker-image-create.yml
@@ -14,19 +14,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build docker image
-        env:
-          AWS_ACCESS_KEY_ID: fakeKeyId
-          AWS_SECRET_ACCESS_KEY: fakeAccessKey
-          AWS_DEFAULT_REGION: us-west-2
         run: |
           docker image build --no-cache --tag reviewers-like-you .
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # - name: Build and push
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     tags: user/reviewers-like-you:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: stevenkrawczyk/reviewers-like-you:latest
