--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -26,9 +26,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Pull DynamoDb docker image
+      - name: Pull docker images
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
+          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
           docker pull amazon/dynamodb-local
+          docker pull minio/minio
+          docker pull stevenkrawczyk/reviewers-like-you
       - name: Generate coverage report
         env:
           AWS_ACCESS_KEY_ID: fakeKeyId
