--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -25,12 +25,22 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Pull DynamoDb docker image
+    - name: Pull docker images
+      env:
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
+        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
         docker pull amazon/dynamodb-local
+    - name: Pull MinIO docker image
+      run: |
+        docker pull minio/minio
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+  
     - name: Pull our docker image
       run: |
-        docker pull amazon/dynamodb-local
+        docker pull stevenkrawczyk/reviewers-like-you
     - name: Test in containers
       run: |
         python -m unittest tests/test_pipeline_containers.py
