--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -30,16 +30,9 @@ jobs:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
-        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+        echo "$DOCKERHUB_TOKEN" | docker login -u $DOCKERHUB_USERNAME --password-stdin
         docker pull amazon/dynamodb-local
-    - name: Pull MinIO docker image
-      run: |
         docker pull minio/minio
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-  
-    - name: Pull our docker image
-      run: |
         docker pull stevenkrawczyk/reviewers-like-you
     - name: Test in containers
       run: |
