--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -34,8 +34,13 @@ jobs:
         docker pull amazon/dynamodb-local
         docker pull minio/minio
         docker pull stevenkrawczyk/reviewers-like-you
-    - name: Test in containers
+    - name: Run tests
+      env:
+        AWS_ACCESS_KEY_ID: fakeKeyId
+        AWS_SECRET_ACCESS_KEY: fakeAccessKey
+        AWS_DEFAULT_REGION: us-west-2
       run: |
+        python -m unittest tests/test_pipeline_in_memory.py
         python -m unittest tests/test_pipeline_containers.py
     - name: Check test coverage
       env:
