--- a/config/ingestion/Dockerfile
+++ b/config/ingestion/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1
-FROM reviewers-like-you:latest
+FROM stevenkrawczyk/reviewers-like-you:latest
 WORKDIR /reviewers-like-you
 ENV FLASK_APP=app/ingestion_server.py
 ENV FLASK_RUN_HOST=0.0.0.0
