--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -41,11 +41,15 @@ jobs:
           AWS_SECRET_ACCESS_KEY: fakeAccessKey
           AWS_DEFAULT_REGION: us-west-2
         run: |
-          pytest . --cov --cov-branch > data/metrics/pytest_cov/coverage_report.txt
+          pytest . --cov --cov-branch > data/metrics/pytest/coverage_report.txt
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: data/metrics/pytest_cov/coverage_report.txt
+          pytest-coverage-path: data/metrics/pytest/coverage_report.txt
       - name: Generate performance statistics
+        env:
+          AWS_ACCESS_KEY_ID: fakeKeyId
+          AWS_SECRET_ACCESS_KEY: fakeAccessKey
+          AWS_DEFAULT_REGION: us-west-2
         run: |
           locust -f tests/locustfile.py -u 10 -r 1 -t 60 --headless --only-summary -H http://localhost:5000 --csv data/metrics/locust/perf
