--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.1.0
 click==8.1.3
 ConfigArgParse==1.5.3
 coverage==6.4.2
+dependency-injector==4.39.1
 docker==5.0.3
 Flask==2.1.3
 Flask-BasicAuth==0.2.0
@@ -50,3 +51,4 @@ Werkzeug==2.2.0
 zipp==3.8.1
 zope.event==4.5.0
 zope.interface==5.4.0
+
