--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -5,7 +5,7 @@ permissions:
   contents: read
 
 jobs:
-  dependency-review:
+  pull-request-checks:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout Repository'
