--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -8,8 +8,11 @@ jobs:
   pull-request-checks:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.9.6
       - name: python-isort
         uses: isort/isort-action@v1.0.0
         with:
@@ -21,10 +24,9 @@ jobs:
           configuration: # optional, default is --check-only --diff
           # path(s) to requirements files that should be installed to properly configure third-party imports
           requirementsFiles: # optional, default is 
-      - name: Install dependencies
+      - name: Install requirements
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Pull docker images
         env:
@@ -35,21 +37,21 @@ jobs:
           docker pull amazon/dynamodb-local
           docker pull minio/minio
           docker pull stevenkrawczyk/reviewers-like-you
-      - name: Generate coverage report
-        env:
-          AWS_ACCESS_KEY_ID: fakeKeyId
-          AWS_SECRET_ACCESS_KEY: fakeAccessKey
-          AWS_DEFAULT_REGION: us-west-2
-        run: |
-          pytest . --cov --cov-branch > data/metrics/pytest/coverage_report.txt
-      - name: Pytest coverage comment
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: data/metrics/pytest/coverage_report.txt
-      - name: Generate performance statistics
-        env:
-          AWS_ACCESS_KEY_ID: fakeKeyId
-          AWS_SECRET_ACCESS_KEY: fakeAccessKey
-          AWS_DEFAULT_REGION: us-west-2
-        run: |
-          locust -f tests/locustfile.py -u 10 -r 1 -t 60 --headless --only-summary -H http://localhost:5000 --csv data/metrics/locust/perf
+      # - name: Generate coverage report
+      #   env:
+      #     AWS_ACCESS_KEY_ID: fakeKeyId
+      #     AWS_SECRET_ACCESS_KEY: fakeAccessKey
+      #     AWS_DEFAULT_REGION: us-west-2
+      #   run: |
+      #     pytest . --cov --cov-branch > data/metrics/pytest/coverage_report.txt
+      # - name: Pytest coverage comment
+      #   uses: MishaKav/pytest-coverage-comment@main
+      #   with:
+      #     pytest-coverage-path: data/metrics/pytest/coverage_report.txt
+      # - name: Generate performance statistics
+      #   env:
+      #     AWS_ACCESS_KEY_ID: fakeKeyId
+      #     AWS_SECRET_ACCESS_KEY: fakeAccessKey
+      #     AWS_DEFAULT_REGION: us-west-2
+      #   run: |
+      #     locust -f tests/locustfile.py -u 10 -r 1 -t 60 --headless --only-summary -H http://localhost:5000 --csv data/metrics/locust/perf
