--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -45,12 +45,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: fakeAccessKey
         AWS_DEFAULT_REGION: us-west-2
       run: |
-        python -m unittest tests/test_pipeline_in_memory.py
-        python -m unittest tests/test_pipeline_containers.py
-    - name: Check test coverage
-      env:
-        AWS_ACCESS_KEY_ID: fakeKeyId
-        AWS_SECRET_ACCESS_KEY: fakeAccessKey
-        AWS_DEFAULT_REGION: us-west-2
-      run: |
-        pytest . --cov --cov-branch --cov-fail-under=80
+        ./tests/run_tests.sh
+    # - name: Check test coverage
+    #   env:
+    #     AWS_ACCESS_KEY_ID: fakeKeyId
+    #     AWS_SECRET_ACCESS_KEY: fakeAccessKey
+    #     AWS_DEFAULT_REGION: us-west-2
+    #   run: |
+    #     pytest . --cov --cov-branch --cov-fail-under=80
