--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==9.0.1
 attrs==21.4.0
+autopep8==1.6.0
 boto3==1.24.36
 botocore==1.27.36
 Brotli==1.0.9
@@ -33,6 +34,7 @@ pandas==1.4.3
 pluggy==1.0.0
 psutil==5.9.1
 py==1.11.0
+pycodestyle==2.8.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-cov==3.0.0
@@ -43,6 +45,7 @@ requests==2.28.1
 roundrobin==0.0.2
 s3transfer==0.6.0
 six==1.16.0
+toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.3.0
 urllib3==1.26.10
