--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pytest==7.1.2
 pytest-cov==3.0.0
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 pyzmq==22.3.0
 requests==2.28.1
 roundrobin==0.0.2
