--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,16 +1,26 @@
 http {
     include mime.types;
 
+    upstream frontendserver {
+        server frontend:3000;
+    }
+
     upstream backendserver {
         server recommendation1:5000;
         server recommendation2:5000;
-
     }
     
     server {
         listen 5000;
         server_name localhost;
         root /reviewers-like-you;
+
+        location / {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://frontendserver;
+        }
 
         location /movies {
             proxy_http_version 1.1;
