--- a/config/nginx/externalproxy/nginx.conf
+++ b/config/nginx/externalproxy/nginx.conf
@@ -5,9 +5,13 @@ http {
         server frontend:3000;
     }
 
-    upstream backendserver {
+    upstream recommendation {
         server recommendation1:5000;
         server recommendation2:5000;
+    }
+
+    upstream movies {
+        server movies:5000;
     }
     
     server {
@@ -26,14 +30,14 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_pass http://backendserver;
+            proxy_pass http://movies;
         }
 
         location /match {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_pass http://backendserver;
+            proxy_pass http://recommendation;
         }
     }
 }
