--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
       - "9001:9001"
     volumes:
       - "./docker/minio/data:/data"
-  nginx:
+  externalproxy:
     image: "nginx:latest"
-    container_name: nginx
+    container_name: externalproxy
     ports: 
       - "5000:5000"
     volumes:
-      - "./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./config/nginx/externalproxy/nginx.conf:/etc/nginx/nginx.conf:ro"
     depends_on:
       - frontend
       - recommendation1
@@ -36,8 +36,25 @@ services:
       - "frontend"
       - "recommendation1"
       - "recommendation2"
+  internalproxy:
+    image: "nginx:latest"
+    container_name: internalproxy
+    ports: 
+      - "5001:5000"
+    volumes:
+      - "./config/nginx/internalproxy/nginx.conf:/etc/nginx/nginx.conf:ro"
+    depends_on:
+      - projection
+      - ingestion1
+      - ingestion2
+    links:
+      - "projection"
+      - "ingestion1"
+      - "ingestion2"
   frontend:
-    build: config/frontend
+    build:
+      context: .
+      dockerfile: config/frontend
     container_name: frontend
     volumes:
       - ./app/frontend:/reviewers-like-you
@@ -57,13 +74,13 @@ services:
       - dynamodb-local
     links:
       - "dynamodb-local"
-    build: config/scraper
+    build:
+      context: .
+      dockerfile: config/scraper
     volumes:
       - .:/reviewers-like-you
-    ports:
-      - "5001:5000"
-  ingestion:
-    container_name: ingestion
+  ingestion1:
+    container_name: ingestion1
     environment:
       AWS_ACCESS_KEY_ID: fakeKeyId
       AWS_SECRET_ACCESS_KEY: fakeAccessKey
@@ -72,11 +89,22 @@ services:
       - dynamodb-local
     links:
       - "dynamodb-local"
-    build: config/ingestion
-    volumes:
-      - .:/reviewers-like-you
-    ports:
-      - "5002:5000"
+    build:
+      context: .
+      dockerfile: config/ingestion
+  ingestion2:
+    container_name: ingestion2
+    environment:
+      AWS_ACCESS_KEY_ID: fakeKeyId
+      AWS_SECRET_ACCESS_KEY: fakeAccessKey
+      AWS_DEFAULT_REGION: us-west-2
+    depends_on:
+      - dynamodb-local
+    links:
+      - "dynamodb-local"
+    build:
+      context: .
+      dockerfile: config/ingestion
   projection:
     container_name: projection
     environment:
@@ -89,11 +117,26 @@ services:
     links:
       - "dynamodb-local"
       - "minio"
-    build: config/projection
+    build:
+      context: .
+      dockerfile: config/projection
+    volumes:
+      - .:/reviewers-like-you'
+  movies:
+    container_name: movies
+    environment:
+      AWS_ACCESS_KEY_ID: fakeKeyId
+      AWS_SECRET_ACCESS_KEY: fakeAccessKey
+      AWS_DEFAULT_REGION: us-west-2
+    depends_on:
+      - minio
+    links:
+      - "minio"
+    build:
+      context: .
+      dockerfile: config/movies
     volumes:
       - .:/reviewers-like-you
-    ports:
-      - "5003:5000" 
   recommendation1:
     container_name: recommendation1
     environment:
@@ -106,7 +149,9 @@ services:
     links:
       - "dynamodb-local"
       - "minio"
-    build: config/recommendation
+    build:
+      context: .
+      dockerfile: config/recommendation
     volumes:
       - .:/reviewers-like-you
   recommendation2:
@@ -121,7 +166,9 @@ services:
     links:
       - "dynamodb-local"
       - "minio"
-    build: config/recommendation
+    build:
+      context: .
+      dockerfile: config/recommendation
     volumes:
       - .:/reviewers-like-you
     
