--- a/config/projection/Dockerfile
+++ b/config/projection/Dockerfile
@@ -1,8 +1,8 @@
 # syntax=docker/dockerfile:1
 FROM stevenkrawczyk/reviewers-like-you:latest
 WORKDIR /reviewers-like-you
-ENV FLASK_APP=servers/projection_server.py
+ENV FLASK_APP=app/servers/projection_server.py
 ENV FLASK_RUN_HOST=0.0.0.0
 EXPOSE 5000
-COPY app/ .
+COPY app/ app/
 CMD ["python", "-m", "flask", "run", "-p", "5000"]
