--- a/config/nginx/internalproxy/nginx.conf
+++ b/config/nginx/internalproxy/nginx.conf
@@ -6,8 +6,7 @@ http {
     }
 
     upstream ingestion {
-        server ingestion1:5000;
-        server ingestion2:5000;
+        server ingestion:5000;
     }
     
     server {
