--- a/config/nginx/externalproxy/nginx.conf
+++ b/config/nginx/externalproxy/nginx.conf
@@ -6,13 +6,14 @@ http {
     }
 
     upstream recommendation {
-        server recommendation1:5000;
-        server recommendation2:5000;
+        server recommendation:5000;
     }
 
     upstream movies {
         server movies:5000;
     }
+
+    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
     
     server {
         listen 5000;
@@ -27,6 +28,7 @@ http {
         }
 
         location /movies {
+            limit_req zone=mylimit;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -34,6 +36,7 @@ http {
         }
 
         location /match {
+            limit_req zone=mylimit;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
