--- a/app/config.yml
+++ b/app/config.yml
@@ -1,8 +1,9 @@
 dynamo_endpoint_url: http://dynamodb-local:8000
 minio_endpoint_url: minio:9000
 table_name: movie_reviews
-bucket_name: projections
+projection_bucket_name: projections
 projection_filepath_root: data/projection_
 movie_indices_filepath: data/movie_indices.json
+upload_bucket_name: uploads
 in_memory: false
 reload_for_testing: true
