--- a/config/nginx/backendproxy/nginx.conf
+++ b/config/nginx/backendproxy/nginx.conf
@@ -1,10 +1,6 @@
 http {
     include mime.types;
 
-    upstream frontendserver {
-        server frontend:3000;
-    }
-
     upstream recommendation {
         server recommendation:5000;
     }
@@ -13,22 +9,19 @@ http {
         server movies:5000;
     }
 
-    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+    upstream similarity {
+        server similarity:5000;
+    }
+
+    limit_req_zone $binary_remote_addr zone=limitreqsbyaddr:20m rate=500r/s;
     
     server {
         listen 5000;
         server_name localhost;
         root /reviewers-like-you;
 
-        location / {
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_pass http://frontendserver;
-        }
-
         location /movies {
-            limit_req zone=mylimit;
+            limit_req zone=limitreqsbyaddr;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -36,12 +29,26 @@ http {
         }
 
         location /match {
-            limit_req zone=mylimit;
+            limit_req zone=limitreqsbyaddr;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_pass http://recommendation;
         }
+
+        location /average {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://similarity;
+        }
+
+        location /closest {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://similarity;
+        }        
     }
 }
 
