--- a/config/nginx/internalproxy/nginx.conf
+++ b/config/nginx/internalproxy/nginx.conf
@@ -1,6 +1,10 @@
 http {
     include mime.types;
 
+    upstream file {
+        server upload:5000;
+    }
+
     upstream projection {
         server projection:5000;
     }
@@ -8,11 +12,18 @@ http {
     upstream ingestion {
         server ingestion:5000;
     }
-    
+
     server {
         listen 5000;
         server_name localhost;
         root /reviewers-like-you;
+
+        location /file {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://file;
+        }
 
         location /upload {
             proxy_http_version 1.1;
