--- a/config/nginx/frontendproxy/nginx.conf
+++ b/config/nginx/frontendproxy/nginx.conf
@@ -4,7 +4,13 @@ http {
     upstream frontendserver {
         server frontend:3000;
     }
-    
+
+    upstream backendserver {
+        server backendproxy:5000;
+    }
+
+    limit_req_zone $binary_remote_addr zone=limitreqsbyaddr:20m rate=500r/s;
+
     server {
         listen 5000;
         server_name localhost;
@@ -15,6 +21,22 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_pass http://frontendserver;
+        }
+
+        location /movies {
+            limit_req zone=limitreqsbyaddr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://backendserver;
+        }
+
+        location /match {
+            limit_req zone=limitreqsbyaddr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://backendserver;
         }
     }
 }
