--- a/config/nginx/internalproxy/nginx.conf
+++ b/config/nginx/internalproxy/nginx.conf
@@ -45,6 +45,27 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_pass http://projection;
         }
+
+        location /ingestionhealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://ingestion;
+        }
+
+        location /uploadhealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://file;
+        }
+
+        location /projectionhealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://projection;
+        }
     }
 }
 
