--- a/config/nginx/backendproxy/nginx.conf
+++ b/config/nginx/backendproxy/nginx.conf
@@ -44,7 +44,28 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_pass http://similarity;
-        }        
+        }
+
+        location /matchhealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://recommendation;
+        }
+
+        location /movieshealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://movies;
+        }
+
+        location /similarityhealth {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://similarity;
+        }
     }
 }
 
