--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-RESTful==0.3.9
 gevent==21.12.0
 geventhttpclient==1.5.5
 greenlet==1.1.2
+healthcheck==1.3.3
 idna==3.3
 importlib-metadata==4.12.0
 iniconfig==1.1.1
