--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -1,54 +1,22 @@
-# name: 'Pull Request Checks'
-# on: [pull_request]
+name: 'Pull Request Checks'
+on: [pull_request]
 
-# jobs:
-#   pull-request-checks:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: Set up Python 3.9
-#         uses: actions/setup-python@v3
-#         with:
-#           python-version: 3.9.6
-#       - name: python-isort
-#         uses: isort/isort-action@v1.0.0
-#         with:
-#           # Version of isort to use
-#           isortVersion: # optional, default is latest
-#           # files or directories to sort
-#           sortPaths: # optional, default is .
-#           # isort configuration options
-#           configuration: # optional, default is --check-only --diff
-#           # path(s) to requirements files that should be installed to properly configure third-party imports
-#           requirementsFiles: # optional, default is 
-#       - name: Install requirements
-#         run: |
-#           python -m pip install --upgrade pip
-#           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#       - name: Pull docker images
-#         env:
-#           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-#         run: |
-#           echo "$DOCKERHUB_TOKEN" | docker login -u $DOCKERHUB_USERNAME --password-stdin docker.io
-#           docker pull amazon/dynamodb-local
-#           docker pull minio/minio
-#           docker pull stevenkrawczyk/reviewers-like-you
-#       - name: Generate coverage report
-#         env:
-#           AWS_ACCESS_KEY_ID: fakeKeyId
-#           AWS_SECRET_ACCESS_KEY: fakeAccessKey
-#           AWS_DEFAULT_REGION: us-west-2
-#         run: |
-#           ./tests/get_coverage.sh
-#       - name: Pytest coverage comment
-#         uses: MishaKav/pytest-coverage-comment@main
-#         with:
-#           pytest-coverage-path: data/metrics/pytest/coverage_report.txt
-#       - name: Generate performance statistics
-#         env:
-#           AWS_ACCESS_KEY_ID: fakeKeyId
-#           AWS_SECRET_ACCESS_KEY: fakeAccessKey
-#           AWS_DEFAULT_REGION: us-west-2
-#         run: |
-#           ./tests/load_test.sh
+jobs:
+  pull-request-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Pull docker images
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          echo "$DOCKERHUB_TOKEN" | docker login -u $DOCKERHUB_USERNAME --password-stdin docker.io
+          docker pull stevenkrawczyk/reviewers-like-you
+      - name: Generate coverage report
+        run: |
+          ./tests/get_coverage.sh
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: data/metrics/pytest/coverage_report.txt
