--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+bin/
 build/
 develop-eggs/
 dist/
@@ -17,6 +18,7 @@ eggs/
 lib/
 lib64/
 parts/
+pkg/
 sdist/
 var/
 wheels/
@@ -133,3 +135,4 @@ data/metrics/locust/*
 data/metrics/pytest/*
 reviewers-like-you-venv/*
 docker/*
+go.sum
